--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,10 @@ dependencies = [
     "sqlalchemy (>=2.0.40,<3.0.0)",
     "alembic (>=1.15.2,<2.0.0)",
     "uvicorn (>=0.34.1,<0.35.0)",
-    "psycopg2-binary (>=2.9.10,<3.0.0)"
+    "psycopg2-binary (>=2.9.10,<3.0.0)",
+    "python-jose[cryptography] (>=3.4.0,<4.0.0)",
+    "python-dotenv (>=1.1.0,<2.0.0)",
+    "python-multipart (>=0.0.20,<0.0.21)"
 ]
 
 
